; ModuleID = '/home/carl/AnghaBench/linux/security/selinux/ss/extr_services.c_security_context_str_to_sid.c'
source_filename = "/home/carl/AnghaBench/linux/security/selinux/ss/extr_services.c_security_context_str_to_sid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.selinux_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @security_context_str_to_sid(%struct.selinux_state* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.selinux_state*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.selinux_state* %0, %struct.selinux_state** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.selinux_state*, %struct.selinux_state** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @security_context_to_sid(%struct.selinux_state* %9, i8* %10, i32 %12, i32* %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @security_context_to_sid(%struct.selinux_state*, i8*, i32, i32*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
